--- a/readme
+++ b/readme
@@ -1,1 +1,4 @@
 It is the project on onlineticket booking.
+In 5 screens we have complete the process.
+In first page we have to take from and to f two search boxes.
+After that it has redirect apsrtc website.
